# helia

./: .env  .env.example  .replit  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  start-helia.bat
.github/workflows/: ci.yml
artifacts/api-server/: Dockerfile  main.py  package.json  pyproject.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/app/: agent_memory.py  audit.py  auth.py  cache.py  chat_agent.py  clerk_proxy.py  db.py  embeddings.py  ingestion_runs.py  llm.py  local_extract.py  mcp_client.py  metrics.py  pii.py  pwc_ai.py  query_rewrite.py  rate_limit.py  retrieval.py  schemas.py  serialize.py  server.py  tenant.py  text.py  zoho.py
artifacts/api-server/app/routes/: admin.py  auth.py  chat.py  documents.py  extract.py  me.py  messages.py  tickets.py
artifacts/api-server/scripts/: dev.mjs
artifacts/api-server/src/: app.ts
artifacts/api-server/src/lib/: db.ts  openai.ts  pii.ts  pwc-ai.ts  text.ts
artifacts/api-server/src/middlewares/: auth.ts
artifacts/api-server/src/routes/: admin.ts  chat.ts  documents.ts  extract.ts  index.ts  me.ts  messages.ts  tickets.ts
artifacts/mockup-sandbox/: vite.config.ts
artifacts/support-ai/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
attached_assets/: Pasted--Build-a-modern-enterprise-grade-highly-scalable-and-lo_1777914046020.txt  Pasted-026-05-06-11-10-23-36-bc195bc5-System-metasidecar-loade_1778046166505.txt
infra/: atlas-vector-index.json  deployment-services.csv
infra/k8s/: web.yaml  (+2 more)
scripts/: ensure_vector_index.py
(+32 files in other folders)
