[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=1.0.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "motor>=3.5",
    "pydantic>=2.7",
    "pymongo>=4.8",
    "python-multipart>=0.0.9",
    "yake>=0.4.8",
    "uvicorn[standard]>=0.30",
]
