[project]
name = "api-server"
version = "0.1.0"
description = "FastAPI backend for the Support AI app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.5",
    "pymongo>=4.8",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "clerk-backend-api>=1.0.0",
    "pydantic>=2.7",
]
