[project]
name = "api-server"
version = "0.1.0"
description = "FastAPI backend for the Support AI app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.5",
    "pymongo>=4.8",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "yake>=0.4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx[http2]>=0.27",
]
